# QT_Fire_Effect

./: CMakeLists.txt  README.md  color.cpp
src/: CMakeLists.txt  color.cpp  color.h  intensity.cpp  intensity.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openCV.cpp  openCV.h  ui_mainwindow.h
